// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTrack renders with default values 1`] = `
<body>
  <div>
    <svg
      viewBox="-220 -175 230 240"
      x="0"
      y="0"
    >
      <defs />
      
      
      <g
        class="tile straight-tile"
        id="id-0"
        transform="rotate(90 0 0)"
      >
        <rect
          fill="var(--color-ground)"
          height="110"
          stroke="var(--color-separator)"
          stroke-width="1"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        id="id-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -165 10.000000000000007 L -165 100 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="1"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -157.92893218813452 7.071067811865482 L -154.3933982822018 10.606601717798219 A 15 15 0 0 0 -150 6.735557395310443e-15 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -157.92893218813452 7.071067811865482 A 10 10 0 0 1 -165 10.000000000000007 L -165 15.000000000000007 A 15 15 0 0 0 -154.3933982822018 10.606601717798219 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -70 6.735557395310443e-15 A 95 95 0 0 1 -77.23144441142776 36.35492607468353 L -72.61204674887132 38.26834323650898 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -77.23144441142776 36.35492607468353 A 95 95 0 0 1 -97.82485578727798 67.175144212722 L -94.28932188134524 70.71067811865474 A 100 100 0 0 0 -72.61204674887132 38.26834323650898 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -97.82485578727798 67.175144212722 A 95 95 0 0 1 -128.64507392531647 87.76855558857224 L -126.73165676349102 92.38795325112868 A 100 100 0 0 0 -94.28932188134524 70.71067811865474 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -128.64507392531647 87.76855558857224 A 95 95 0 0 1 -165 95 L -165 100 A 100 100 0 0 0 -126.73165676349102 92.38795325112868 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        id="id-2"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          d="M -210 -54.99999999999999 A 10 10 0 0 1 -220 -44.99999999999999 L -220 45.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -120 7.105427357601002e-15 L -120 -54.99999999999999 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="1"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -210 -54.99999999999999 A 10 10 0 0 1 -212.92893218813452 -47.92893218813452 L -209.3933982822018 -44.39339828220178 A 15 15 0 0 0 -205 -54.99999999999999 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -212.92893218813452 -47.92893218813452 A 10 10 0 0 1 -220 -44.99999999999999 L -220 -39.99999999999999 A 15 15 0 0 0 -209.3933982822018 -44.39339828220178 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -125 7.105427357601002e-15 A 40 40 0 0 1 -136.7157287525381 28.284271247461906 L -133.18019484660536 31.819805153394643 A 45 45 0 0 0 -120 7.105427357601002e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -136.7157287525381 28.284271247461906 A 40 40 0 0 1 -165 40.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -133.18019484660536 31.819805153394643 Z"
            fill="var(--color-even)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="5"
            width="27.5"
            x="-220"
            y="40.00000000000001"
          />
          
          <rect
            fill="var(--color-odd)"
            height="5"
            width="27.5"
            x="-192.5"
            y="40.00000000000001"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-125"
            y="-54.99999999999999"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-125"
            y="-27.499999999999993"
          />
        </g>
      </g>
      
       
    </svg>
    
  </div>
</body>
`;

exports[`SimpleTrack renders with the given element in slots 1`] = `
<body>
  <div />
  <div>
    <svg
      viewBox="-220 -175.00000000000003 230 240.00000000000003"
      x="0"
      y="0"
    >
      <defs>
        <circle
          cx="10"
          cy="10"
          id="circle"
          r="10"
          slot="defs"
        />
      </defs>
      
      
      <g
        class="tile straight-tile"
        id="id-0"
        transform="rotate(90 0 0)"
      >
        <rect
          fill="var(--color-ground)"
          height="110"
          stroke="var(--color-separator)"
          stroke-width="1"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        id="id-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -165 10.000000000000007 L -165 100 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="1"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -157.92893218813452 7.071067811865482 L -154.3933982822018 10.606601717798219 A 15 15 0 0 0 -150 6.735557395310443e-15 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -157.92893218813452 7.071067811865482 A 10 10 0 0 1 -165 10.000000000000007 L -165 15.000000000000007 A 15 15 0 0 0 -154.3933982822018 10.606601717798219 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -70 6.735557395310443e-15 A 95 95 0 0 1 -77.23144441142776 36.35492607468353 L -72.61204674887132 38.26834323650898 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -77.23144441142776 36.35492607468353 A 95 95 0 0 1 -97.82485578727798 67.175144212722 L -94.28932188134524 70.71067811865474 A 100 100 0 0 0 -72.61204674887132 38.26834323650898 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -97.82485578727798 67.175144212722 A 95 95 0 0 1 -128.64507392531647 87.76855558857224 L -126.73165676349102 92.38795325112868 A 100 100 0 0 0 -94.28932188134524 70.71067811865474 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -128.64507392531647 87.76855558857224 A 95 95 0 0 1 -165 95 L -165 100 A 100 100 0 0 0 -126.73165676349102 92.38795325112868 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        id="id-2"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          d="M -210 -54.99999999999999 A 10 10 0 0 1 -220 -44.99999999999999 L -220 45.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -120 7.105427357601002e-15 L -120 -54.99999999999999 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="1"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -210 -54.99999999999999 A 10 10 0 0 1 -212.92893218813452 -47.92893218813452 L -209.3933982822018 -44.39339828220178 A 15 15 0 0 0 -205 -54.99999999999999 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -212.92893218813452 -47.92893218813452 A 10 10 0 0 1 -220 -44.99999999999999 L -220 -39.99999999999999 A 15 15 0 0 0 -209.3933982822018 -44.39339828220178 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -125 7.105427357601002e-15 A 40 40 0 0 1 -136.7157287525381 28.284271247461906 L -133.18019484660536 31.819805153394643 A 45 45 0 0 0 -120 7.105427357601002e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -136.7157287525381 28.284271247461906 A 40 40 0 0 1 -165 40.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -133.18019484660536 31.819805153394643 Z"
            fill="var(--color-even)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="5"
            width="27.5"
            x="-220"
            y="40.00000000000001"
          />
          
          <rect
            fill="var(--color-odd)"
            height="5"
            width="27.5"
            x="-192.5"
            y="40.00000000000001"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-125"
            y="-54.99999999999999"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-125"
            y="-27.499999999999993"
          />
        </g>
      </g>
      
      
      <g
        class="tile straight-tile"
        id="id-3"
        transform="rotate(270 -110 -110)"
      >
        <rect
          fill="var(--color-ground)"
          height="110"
          stroke="var(--color-separator)"
          stroke-width="1"
          width="90"
          x="-155"
          y="-110"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-155"
            y="-110"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-155"
            y="-82.5"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-155"
            y="-55"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-155"
            y="-27.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-70"
            y="-110"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-70"
            y="-82.5"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-70"
            y="-55"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-70"
            y="-27.5"
          />
        </g>
      </g>
      
       
      <rect
        height="50"
        width="100"
        x="10"
        y="10"
      />
    </svg>
    
    
  </div>
</body>
`;

exports[`SimpleTrack renders with the given parameters 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-220 -175 230 240"
      width="400"
      x="100"
      y="200"
    >
      <defs />
      
      
      <g
        class="tile straight-tile"
        id="id-0"
        transform="rotate(90 0 0)"
      >
        <rect
          fill="var(--color-ground)"
          height="110"
          stroke="var(--color-separator)"
          stroke-width="1"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        id="id-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -165 10.000000000000007 L -165 100 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="1"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -157.92893218813452 7.071067811865482 L -154.3933982822018 10.606601717798219 A 15 15 0 0 0 -150 6.735557395310443e-15 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -157.92893218813452 7.071067811865482 A 10 10 0 0 1 -165 10.000000000000007 L -165 15.000000000000007 A 15 15 0 0 0 -154.3933982822018 10.606601717798219 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -70 6.735557395310443e-15 A 95 95 0 0 1 -77.23144441142776 36.35492607468353 L -72.61204674887132 38.26834323650898 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -77.23144441142776 36.35492607468353 A 95 95 0 0 1 -97.82485578727798 67.175144212722 L -94.28932188134524 70.71067811865474 A 100 100 0 0 0 -72.61204674887132 38.26834323650898 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -97.82485578727798 67.175144212722 A 95 95 0 0 1 -128.64507392531647 87.76855558857224 L -126.73165676349102 92.38795325112868 A 100 100 0 0 0 -94.28932188134524 70.71067811865474 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -128.64507392531647 87.76855558857224 A 95 95 0 0 1 -165 95 L -165 100 A 100 100 0 0 0 -126.73165676349102 92.38795325112868 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        id="id-2"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          d="M -210 -54.99999999999999 A 10 10 0 0 1 -220 -44.99999999999999 L -220 45.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -120 7.105427357601002e-15 L -120 -54.99999999999999 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="1"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -210 -54.99999999999999 A 10 10 0 0 1 -212.92893218813452 -47.92893218813452 L -209.3933982822018 -44.39339828220178 A 15 15 0 0 0 -205 -54.99999999999999 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -212.92893218813452 -47.92893218813452 A 10 10 0 0 1 -220 -44.99999999999999 L -220 -39.99999999999999 A 15 15 0 0 0 -209.3933982822018 -44.39339828220178 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -125 7.105427357601002e-15 A 40 40 0 0 1 -136.7157287525381 28.284271247461906 L -133.18019484660536 31.819805153394643 A 45 45 0 0 0 -120 7.105427357601002e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -136.7157287525381 28.284271247461906 A 40 40 0 0 1 -165 40.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -133.18019484660536 31.819805153394643 Z"
            fill="var(--color-even)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="5"
            width="27.5"
            x="-220"
            y="40.00000000000001"
          />
          
          <rect
            fill="var(--color-odd)"
            height="5"
            width="27.5"
            x="-192.5"
            y="40.00000000000001"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-125"
            y="-54.99999999999999"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-125"
            y="-27.499999999999993"
          />
        </g>
      </g>
      
       
    </svg>
    
  </div>
</body>
`;

exports[`SimpleTrack updates when the store is modified 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-220 -175.00000000000003 230 240.00000000000003"
      width="400"
      x="100"
      y="200"
    >
      <defs />
      
      
      <g
        class="tile straight-tile"
        id="id-0"
        transform="rotate(90 0 0)"
      >
        <rect
          fill="var(--color-ground)"
          height="110"
          stroke="var(--color-separator)"
          stroke-width="1"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        id="id-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -165 10.000000000000007 L -165 100 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="1"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -157.92893218813452 7.071067811865482 L -154.3933982822018 10.606601717798219 A 15 15 0 0 0 -150 6.735557395310443e-15 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -157.92893218813452 7.071067811865482 A 10 10 0 0 1 -165 10.000000000000007 L -165 15.000000000000007 A 15 15 0 0 0 -154.3933982822018 10.606601717798219 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -70 6.735557395310443e-15 A 95 95 0 0 1 -77.23144441142776 36.35492607468353 L -72.61204674887132 38.26834323650898 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -77.23144441142776 36.35492607468353 A 95 95 0 0 1 -97.82485578727798 67.175144212722 L -94.28932188134524 70.71067811865474 A 100 100 0 0 0 -72.61204674887132 38.26834323650898 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -97.82485578727798 67.175144212722 A 95 95 0 0 1 -128.64507392531647 87.76855558857224 L -126.73165676349102 92.38795325112868 A 100 100 0 0 0 -94.28932188134524 70.71067811865474 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -128.64507392531647 87.76855558857224 A 95 95 0 0 1 -165 95 L -165 100 A 100 100 0 0 0 -126.73165676349102 92.38795325112868 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        id="id-2"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          d="M -210 -54.99999999999999 A 10 10 0 0 1 -220 -44.99999999999999 L -220 45.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -120 7.105427357601002e-15 L -120 -54.99999999999999 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="1"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -210 -54.99999999999999 A 10 10 0 0 1 -212.92893218813452 -47.92893218813452 L -209.3933982822018 -44.39339828220178 A 15 15 0 0 0 -205 -54.99999999999999 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -212.92893218813452 -47.92893218813452 A 10 10 0 0 1 -220 -44.99999999999999 L -220 -39.99999999999999 A 15 15 0 0 0 -209.3933982822018 -44.39339828220178 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -125 7.105427357601002e-15 A 40 40 0 0 1 -136.7157287525381 28.284271247461906 L -133.18019484660536 31.819805153394643 A 45 45 0 0 0 -120 7.105427357601002e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -136.7157287525381 28.284271247461906 A 40 40 0 0 1 -165 40.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -133.18019484660536 31.819805153394643 Z"
            fill="var(--color-even)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="5"
            width="27.5"
            x="-220"
            y="40.00000000000001"
          />
          
          <rect
            fill="var(--color-odd)"
            height="5"
            width="27.5"
            x="-192.5"
            y="40.00000000000001"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-125"
            y="-54.99999999999999"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-125"
            y="-27.499999999999993"
          />
        </g>
      </g>
      
      
      <g
        class="tile straight-tile"
        id="id-3"
        transform="rotate(270 -110 -110)"
      >
        <rect
          fill="var(--color-ground)"
          height="110"
          stroke="var(--color-separator)"
          stroke-width="1"
          width="90"
          x="-155"
          y="-110"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-155"
            y="-110"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-155"
            y="-82.5"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-155"
            y="-55"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-155"
            y="-27.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-70"
            y="-110"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-70"
            y="-82.5"
          />
          
          <rect
            fill="var(--color-odd)"
            height="27.5"
            width="5"
            x="-70"
            y="-55"
          />
          
          <rect
            fill="var(--color-even)"
            height="27.5"
            width="5"
            x="-70"
            y="-27.5"
          />
        </g>
      </g>
      
       
    </svg>
    
  </div>
</body>
`;
